FIXED ./config/secrets.yml. REMOVED providers.tf. UPDATED *.erb in an effort to remove repeated queries. ITERATED on ./partials/_side_menu.erb to be more pragmatic.

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -14,16 +14,16 @@
 # instead read values from the environment.
 
 development:
-  secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
+  secret_key_base: <%= ENV["WEB_APP_COOKIE_SECRET_BASE"] %>
   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
   stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
 
 test:
-  secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
+  secret_key_base: <%= ENV["WEB_APP_COOKIE_SECRET_BASE"] %>
   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
   stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
 
 production:
-  secret_key_base: <%= ENV["COOKIE_SECRET_KEY_BASE"] %>
+  secret_key_base: <%= ENV["WEB_APP_COOKIE_SECRET_BASE"] %>
   stripe_secret_key: <%= ENV["STRIPE_SK"] %>
   stripe_publishable_key: <%= ENV["STRIPE_PK"] %>
