--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,7 +44,7 @@
       "density": "4.0",
       "purpose": "maskable"
     }, {
-      "src": "apple-touch-icon-192x192.png",
+      "src": "apple-touch-icon.png",
       "sizes": "192x192",
       "type": "image/png",
       "density": "4.0"
