--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "cypress": "^4.10.0",
+    "cypress": "^4.12.1",
+    "cypress-audit": "^0.2.2",
     "cypress-image-snapshot": "^3.1.1"
-  },
-  "scripts": {
-    "test": "test"
   },
   "repository": {
     "type": "git",
