--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "cypress": "^4.12.1",
     "cypress-audit": "^0.2.2",
-    "cypress-image-snapshot": "^3.1.1"
+    "cypress-image-snapshot": "^3.1.1",
+    "mocha-junit-reporter": "^2.0.0"
   },
   "repository": {
     "type": "git",
