Repo resources clean up.

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /app
 
 COPY ./cypress ./cypress
 COPY ./cypress.json ./cypress.json
-COPY ./package.json ./package.json
 COPY ./package-lock.json ./package-lock.json
+COPY ./package.json ./package.json
 
 RUN npm update npm
-RUN npm install cypress cypress-audit cypress-image-snapshot --save-dev
+RUN npm install --save-dev
