--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cypress": "^5.0",
     "cypress-audit": "^0.2.2",
     "cypress-image-snapshot": "^3.1.1",
-    "mocha-junit-reporter": "^2.0.0"
+    "mocha-junit-reporter": "^2.0.0",
+    "mysql": "^2.18.1"
   },
   "repository": {
     "type": "git",
