--- a/cypress.json.dist
+++ b/cypress.json.dist
@@ -1,4 +1,6 @@
 {
+  "abort_strategy": "spec",
+  "baseUrl": "https://dev.connechub.com/",
   "chromeWebSecurity": false,
   "pageLoadTimeout": 30000,
   "projectId": "q357pv",
@@ -6,6 +8,14 @@
   "video": false,
   "viewportHeight": 960,
   "viewportWidth": 1440,
+  "env": {
+    "db": {
+      "database": "connechub",
+      "host": "",
+      "password": "",
+      "user": ""
+    }
+  },
   "reporterOptions": {
     "jenkinsMode": true,
     "mochaFile": "cypress/results/test-[hash].xml",
