MOVED ./helpers to ./libs. UPDATED Gemfile* to now only include the AWS subpackages needed.

--- a/libs/Dockerfile
+++ b/libs/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 
 # error: ALSA lib confmisc.c:767:(parse_card) cannot find card '0'
 # source: https://github.com/cypress-io/cypress-docker-images/issues/52#issuecomment-446144630
-COPY ./ /app && cp -f /app/helpers/asound.conf /etc/asound.conf
+COPY ./ /app && cp -f /app/libs/asound.conf /etc/asound.conf
 
 RUN npm update npm && npm install --save-dev
