--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "web_app",
+  "name": "Connechub",
   "version": "1.1.9",
-  "description": "## Badges",
+  "description": "Connechub web application",
   "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
   "dependencies": {},
   "devDependencies": {
-    "cypress": "^5.0",
-    "cypress-audit": "^0.2.2",
-    "cypress-image-snapshot": "^3.1.1",
-    "mocha-junit-reporter": "^2.0.0",
-    "mysql": "^2.18.1"
+    "cypress": "^9.5",
+    "cypress-audit": "^1.1.0",
+    "cypress-image-snapshot": "^4.0.1",
+    "mocha-junit-reporter": "^2.0.2"
   },
   "repository": {
     "type": "git",
